--- a/doc_modern/examples/animate.in
+++ b/doc_modern/examples/animate.in
@@ -12,7 +12,7 @@ script_name="$1"
 script_mode="$2"
 script_dir=$(dirname "${script_name}")
 local_script=$(basename "${script_name}")
-script="@GMT_SOURCE_DIR@/doc/examples/${script_name}"
+script="@GMT_SOURCE_DIR@/doc_modern/examples/${script_name}"
 classic=$(grep "GMT CLASSIC" "$script" -c)
 if ! [ -x "${script}" ]; then
   echo "error: cannot execute script ${script}." >&2
@@ -34,7 +34,7 @@ LANG=C
 # Define variables that are needed *within* test scripts
 GMT_SOURCE_DIR="@GMT_SOURCE_DIR@"
 GRAPHICSMAGICK="@GRAPHICSMAGICK@"
-src="@GMT_SOURCE_DIR@/doc/examples/${script_dir}"
+src="@GMT_SOURCE_DIR@/doc_modern/examples/${script_dir}"
 
 # Font lookup path for Ghostscript (invoked from gm compare and ps2raster)
 export GS_FONTPATH="@CMAKE_CURRENT_SOURCE_DIR@/ex31/fonts"
